tests/spec/non_conformant/errors/extend/selector/missing.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/extend/selector/missing.hrx"

// Ignoring "test", error tests are not supported yet.
